# eta-gestemas

./: .gitignore  CMakeLists.txt  ChangeLog  README.md  eta-gestemas.desktop  eta_gestemas  recognizers.xml
cmake/: BuildTypeConfig.cmake  FindFrame.cmake
debian/: changelog  control  copyright  gbp.conf  rules
doc/: CMakeLists.txt  Doxyfile.in
lib/: CMakeLists.txt  utilities.h
lib/GestureListener/: dbusswipekeyboard.cpp  dbusswipekeyboard.h  dbustapkeyboard.cpp  dbustapkeyboard.h  dbusvirtualkeyboard.cpp  dbusvirtualkeyboard.h  dbvirtualkeyboard.cpp  drag.cpp  drag.h  gesturelistener.cpp  gesturelistener.h  leftclick.cpp  leftclick.h  longpresslistener.cpp  longpresslistener.h  move.cpp  move.h  panlistener.cpp  panlistener.h  rightclick.cpp  rightclick.h  scroll.cpp  scroll.h  simplegesturelistener.cpp  simplegesturelistener.h  swipelistener.cpp  swipelistener.h  taplistener.cpp  taplistener.h  twotouchpinchlistener.cpp  twotouchpinchlistener.h  xtest.cpp  xtest.h  xtestatomicbeganorrecognized.cpp  xtestatomicbeganorrecognized.h  xtestatomicendedorrecognized.cpp  xtestatomicendedorrecognized.h  xtestgesturelistener.cpp  xtestgesturelistener.h  xtestlongpressmove.cpp  (+31 more)
lib/GestureRecognizer/: gesturelistener.h  gesturerecognizer.cpp  gesturerecognizer.h  gesturerecognizermanager.cpp  gesturerecognizermanager.h  longpressgesturerecognizer.cpp  longpressgesturerecognizer.h  pangesturerecognizer.cpp  pangesturerecognizer.h  pinchgesturerecognizer.h  rightclickinvoker.h  state.cpp  state.h  swipegesturerecognizer.cpp  swipegesturerecognizer.h  tapgesturerecognizer.cpp  tapgesturerecognizer.h  touch.cpp  touch.h  twotouchpinchgesturerecognizer.cpp  twotouchpinchgesturerecognizer.h  utilities.h
lib/TargetFactory/: target.cpp  target.h  targetfactory.cpp  targetfactory.h
lib/TouchManager/: libframetouchmanager.cpp  libframetouchmanager.h  touch.h  touchmanager.cpp  touchmanager.h  xlibcompatibletouchmanager.h
lib/WindowManagerAdapter/: windowmanageradapter.cpp  windowmanageradapter.h  windowmanageradapter_tst.h  windowmanageradapterlistener.cpp  windowmanageradapterlistener.h  windowmanageradapterlistenerinterface.h  xlibwindowmanageradapter.cpp  xlibwindowmanageradapter.h  xlibwindowmanageradapter_p.h
src/: CMakeLists.txt  config.h.in  main.cpp
test/: CMakeLists.txt  config.xml  statetest.cpp  targetfactorytest.cpp  xlibwmatest.cpp
tools/: CMakeLists.txt  config.xml  integration.xml  integrationtool.cpp  longpress.xml  longpresstool.cpp  pan.xml  pantool.cpp  swipe.xml  swipetool.cpp  tap.xml  taptool.cpp  tool1.cpp  touchmanagertool.cpp  twotouchpinch.xml  twotouchpinchtool.cpp  xlibwmatool.cpp
